<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ayuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondoprincipal"
    tools:context="com.example.usuario.dinamicview.AyudaActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_parte_uno"
            android:textColor="@color/colorLetra"
            android:textSize="@dimen/tam_letra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_letra_aux"
            android:textColor="@color/colorFondo"
            android:text="@string/text_explicacion_uno"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_parte_dos"
            android:textColor="@color/colorLetra"
            android:textSize="@dimen/tam_letra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_letra_aux"
            android:textColor="@color/colorFondo"
            android:text="@string/text_explicacion_funciones"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_parte_dos_uno"
            android:textColor="@color/colorLetra"
            android:textSize="@dimen/tam_letra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_letra_aux"
            android:textColor="@color/colorFondo"
            android:text="@string/text_explicacion_nota"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_parte_tres"
            android:textColor="@color/colorLetra"
            android:textSize="@dimen/tam_letra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_letra_aux"
            android:textColor="@color/colorFondo"
            android:text="@string/text_explicacion_tabla"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_parte_dos_uno"
            android:textColor="@color/colorLetra"
            android:textSize="@dimen/tam_letra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_letra_aux"
            android:textColor="@color/colorFondo"
            android:text="@string/text_explicacion_nota_dos"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_parte_cuatro"
            android:textColor="@color/colorLetra"
            android:textSize="@dimen/tam_letra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tam_letra_aux"
            android:textColor="@color/colorFondo"
            android:text="@string/text_explicacion_karnaugh"
            android:layout_gravity="center"/>
        </LinearLayout>
</ScrollView>
