<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondoprincipal"
    tools:context="com.example.usuario.dinamicview.CreditsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facultad_ing"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_carrera"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_carrera"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_proyecto"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_proyecto"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_asesores"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_asesor_uno"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_asesor_dos"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_alumnos"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_alumno_uno"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_alumno_dos"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nom_alumno_tres"
                android:layout_gravity="center"
                android:textSize="@dimen/tam_letra"
                android:textColor="@color/colorFondo"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
