<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.BrandedLaunch"
    tools:context="com.example.usuario.dinamicview.MainMenuActivity"
    android:background="@drawable/fondo_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:scaleX="0.8"
                android:scaleY="0.8"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33">
            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_start"
                android:theme="@style/RaisedButtonDark"
                android:layout_centerInParent="true"
                android:background="@drawable/fondoboton"
                android:onClick="goStart"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33">
            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_help"
                android:theme="@style/RaisedButtonDark"
                android:layout_centerInParent="true"
                android:background="@drawable/fondoboton"
                android:onClick="goHelp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33">
            <Button
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_credits"
                android:theme="@style/RaisedButtonDark"
                android:layout_centerInParent="true"
                android:background="@drawable/fondoboton"
                android:onClick="goCredits"
                />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>